# CPP_Reactor

./: .clangd  .gitignore  Buffer.cpp  Buffer.hpp  CMakeLists.txt  Channel.hpp  CoreStatus.hpp  Dispatcher.cpp  Dispatcher.hpp  EpollDispatcher.cpp  EpollDispatcher.hpp  EventLoop.cpp  EventLoop.hpp  HttpRequest.cpp  HttpRequest.hpp  HttpResponse.cpp  HttpResponse.hpp  IOThreadPool.cpp  IOThreadPool.hpp  Makefile  Metrics.cpp  Metrics.hpp  PollDispatcher.cpp  PollDispatcher.hpp  SelectDispatcher.cpp  SelectDispatcher.hpp  TcpConnection.cpp  TcpConnection.hpp  TcpServer.cpp  TcpServer.hpp  compile_commands.json  main.cpp  项目日志.md
docs/: BENCHMARK_FULL_SUMMARY.md  ITERATION_01_LIFECYCLE.md  ITERATION_02_PROTOCOL_STATUS.md  ITERATION_03_HTTP_BODY_CONTENT_LENGTH.md  ITERATION_04_BODY_GUARDRAIL.md  ITERATION_05_BUILD_SYSTEM_FIX.md  ITERATION_06_TIMEOUT_AND_413.md  ITERATION_07_RESPONSE_UNIFICATION.md  ITERATION_08_CLANGD_CONFIG.md  ITERATION_09_INFLIGHT_PARSER_CONTEXT.md  ITERATION_10_METRICS_BASELINE.md  ITERATION_11_TEST_FIRST_STEP.md  ITERATION_12_USABILITY_CLOSURE.md  ITERATION_13_CRASH_CHAIN_ANALYSIS.md  ITERATION_14_DEFERRED_RECYCLE.md  ITERATION_15_HTTP_RESPONSE_BOUNDARY.md  ITERATION_16_CLOSE_TIMING_EXPERIMENT.md  ITERATION_17_CONNECTION_MODE_SWITCH.md  ITERATION_18_KEEPALIVE_GUARDRAILS.md  ITERATION_19_REACTOR_HANDLER_EXTENSION.md  ITERATION_20_STATIC_BROWSER_DEMO.md  ITERATION_21_ADAPTER_SPLIT_AND_ECOSYSTEM.md  PERF_BASELINE_TEMPLATE.md  PROJECT_REFACTOR_MAP.md
scripts/: bench_http.sh  bench_server_profiles.sh  test_baseline_once.sh  test_smoke.sh
tests/: README.md  (+2 more)
(+17 files in other folders)
